namespace ПАПС.AbstractFactory
{
    public interface ISensor
    {
        string GetValue();
    }
}